--- a/app/views/layouts/_footer.html .erb
+++ b/app/views/layouts/_footer.html .erb
@@ -6,8 +6,8 @@ by Michael Hart
         
         <nav>
           <ul >
-            <li><%= link_to "About",   '#' %></li>
-            <li><%= link_to "Contact",   '#' %></li>
+            <li><%= link_to "About",   about_path %></li>
+            <li><%= link_to "Contact",   contact_path %></li>
             <li><a href ="http://news.railstutorial.org">News </a></li>
           </ul>
         </nav>
